@@ -1,7 +1,11 @@
 3.2.2-dev 202?-??-??
 =======
 
-* Fix bug in error handling in __sleep, slightly speed up serializing with __sleep.
+* Fix bug in out of memory error handling in __sleep, slightly speed up serializing with __sleep.
+* Speed up serializing by optimizing for the case where there is no memory manager override.
+  When there is a memory manager override, only use that for allocating the string to return.
+  (benchmarks/serialize-scalar-int.b.php showed a speedup from 0.22 to 0.18 seconds for repeated serialization of a single scalar, 
+  and from 0.186 to 0.180 seconds for benchmarks/serialize-stringarray.b.php for an array of strings)
 
 3.2.1 2020-12-27
 =======
